Implementing CR Changes

--- a/partsAvailability/webapp/i18n/i18n.properties
+++ b/partsAvailability/webapp/i18n/i18n.properties
@@ -46,3 +46,21 @@ ParthasStopSales=Part Number has Stop Sales Flag as Yes
  
 #XTBS: Dealer value cannot be blank before clicking Search Material
 DealercannotbeBlank=Dealer Value cannot be blank
+
+#This text added after 26-11
+TYPE=Type
+#XMSG: 
+TYPEC=Child
+TYPEM=Main
+TYPEA=Alternate
+TYPEI=Interchangeable
+TYPEF=Forward
+TYPECHEAD=Multiple
+TYPEMHEAD=Multiple
+TYPEAHEAD=Elective
+
+
+
+ 
+#XMSG: 
+ParthasDoNotDisplay=The Pricing and Quantity data not available for your dealer type. 
