--- a/partsAvailability/webapp/i18n/i18n_en.properties
+++ b/partsAvailability/webapp/i18n/i18n_en.properties
@@ -46,3 +46,14 @@ Logout=Logout
 supplyingPlantIsBlank=Supplying plant is blank in SAP, no additional details requested
 
 divisionsDoNotMatch=Division from the URL do not match with the Dealer Division in SAP
+
+#This text added after 26-11
+TYPE=Type
+TYPEC=Child
+TYPEM=Main
+TYPEA=Alternate
+TYPEI=Interchangeable
+TYPEF=Forward
+
+#XMSG: 
+ParthasDoNotDisplay=The Pricing and Quantity data not available for your dealer type. 
