--- a/partsAvailability/webapp/i18n/i18n_fr.properties
+++ b/partsAvailability/webapp/i18n/i18n_fr.properties
@@ -41,3 +41,15 @@ SEARCH=Recherche
 Logout=Connectez - Out
 OBSOLETE=obsoleto
 ParthasStopSales=Placeholder for French Description Part Number has Stop Sales Flag as Yes - Translation not yet submitted
+
+#This text added after 26-11
+TYPE=Type
+TYPEC=Enfant
+TYPEM=Principale
+TYPEA=Alterner
+TYPEI=Interchangeable
+TYPEF=Vers l'avant
+
+
+#XMSG: 
+ParthasDoNotDisplay=The Pricing and Quantity data not available for your dealer type.  -  French translation TODO
