CR Changes Delivered to FUT on 30thNOv.

--- a/partsAvailability/webapp/i18n/i18n.properties
+++ b/partsAvailability/webapp/i18n/i18n.properties
@@ -64,3 +64,5 @@ TYPEAHEAD=Elective
  
 #XMSG: 
 ParthasDoNotDisplay=The Pricing and Quantity data not available for your dealer type. 
+
+supplyingPlantNotFound=Supplying Plant Not Found
