--- a/partsAvailability/webapp/i18n/i18n_en.properties
+++ b/partsAvailability/webapp/i18n/i18n_en.properties
@@ -57,3 +57,4 @@ TYPEF=Forward
 
 #XMSG: 
 ParthasDoNotDisplay=The Pricing and Quantity data not available for your dealer type. 
+supplyingPlantNotFound=Supplying Plant Not Found
