--- a/partsAvailability/webapp/i18n/i18n_fr.properties
+++ b/partsAvailability/webapp/i18n/i18n_fr.properties
@@ -40,7 +40,7 @@ TBD=Concessionnaire invalide
 SEARCH=Recherche
 Logout=Connectez - Out
 OBSOLETE=obsoleto
-ParthasStopSales=Placeholder for French Description Part Number has Stop Sales Flag as Yes - Translation not yet submitted
+ParthasStopSales=Le numéro de pièce a l'indicateur d'arrêt des ventes sur Oui
 
 #This text added after 26-11
 TYPE=Type
@@ -50,6 +50,24 @@ TYPEA=Alterner
 TYPEI=Interchangeable
 TYPEF=Vers l'avant
 
-
+TYPECHEAD=Plusieurs
+TYPEMHEAD=Plusieurs
+TYPEAHEAD=Électif
+ 
 #XMSG: 
-ParthasDoNotDisplay=The Pricing and Quantity data not available for your dealer type.  -  French translation TODO
+ParthasDoNotDisplay=
+Les données de tarification et de quantité ne sont pas disponibles pour votre type de revendeur.
+
+
+supplyingPlantNotFound=Usine fournisseur introuvable
+
+
+DEALER_NO_TEXT=Dealer Number  :  
+DEALER_NAME_TEXT=Dealer Name  :  
+
+ 
+Logout=Logout
+supplyingPlantIsBlank=Supplying plant is blank in SAP, no additional details requested
+
+divisionsDoNotMatch=Division from the URL do not match with the Dealer Division in SAP
+
