Changes made for Defect fix in Wave 2

--- a/partsAvailability/webapp/i18n/i18n.properties
+++ b/partsAvailability/webapp/i18n/i18n.properties
@@ -40,8 +40,7 @@ systemErrorOccured=There is a system Error, Please speak to IT/SAP Technical tea
 DEALER_NO_TEXT=Dealer Number  :  
 DEALER_NAME_TEXT=Dealer Name  :  
 
-ParthasStopSales=Part Number has Stop Sales Flag as Yes
-
+ParthasStopSales=Part Number has Stop Sales code Applied
 
  
 #XTBS: Dealer value cannot be blank before clicking Search Material
