--- a/partsAvailability/webapp/i18n/i18n_en.properties
+++ b/partsAvailability/webapp/i18n/i18n_en.properties
@@ -41,7 +41,7 @@ systemErrorOccured=There is a system Error, Please speak to IT/SAP Technical tea
 DEALER_NO_TEXT=Dealer Number  :  
 DEALER_NAME_TEXT=Dealer Name  :  
 
-ParthasStopSales=Part Number has Stop Sales Flag as Yes
+ParthasStopSales=Part Number has Stop Sales code Applied
 Logout=Logout
 supplyingPlantIsBlank=Supplying plant is blank in SAP, no additional details requested
 
