--- a/partsAvailability/webapp/i18n/i18n_fr.properties
+++ b/partsAvailability/webapp/i18n/i18n_fr.properties
@@ -40,7 +40,7 @@ TBD=Concessionnaire invalide
 SEARCH=Recherche
 Logout=Connectez - Out
 OBSOLETE=obsoleto
-ParthasStopSales=Le numéro de pièce a l'indicateur d'arrêt des ventes sur Oui
+ParthasStopSales=Le numéro de pièce a un code Stop Sales appliqué
 
 #This text added after 26-11
 TYPE=Type
