Sync i18n.properties with i18n_en.properties

--- a/partsAvailability/webapp/i18n/i18n.properties
+++ b/partsAvailability/webapp/i18n/i18n.properties
@@ -15,7 +15,7 @@ STOCKED=Stocked
 RETURNABLE=Returnable
 SHIPPED_VIA=Shipped Via
 PART_TYPE_CODE=Part Type Code
-LOCATION_TEXT= Location 
+LOCATION_TEXT= Location
 QTY_AVAILABLE=Qty Available
 QTY_BACK_ORDERED=Qty Back Ordered
 MAXIMUM_DAILY_ORDERED_QTY=Maximum Daily Ordered Quantity
@@ -31,37 +31,29 @@ LAST_UPDATED_DATE=Last Updated Date
 FULLSCREEN_TITLE=Parts Availability
 SEARCH=SEARCH
 OBSOLETE=Obsolete
+
 #YMSG: Material Not found in SAP.  Please check your Input and retry again.
 materialNotFound=Part Number Not found
- 
+
 #YMSG: There is a system Error, Please speak to IT/SAP Technical team to analyze further
 systemErrorOccured=There is a system Error, Please speak to IT/SAP Technical team to analyze further
 
-DEALER_NO_TEXT=Dealer Number  :  
-DEALER_NAME_TEXT=Dealer Name  :  
+DEALER_NO_TEXT=Dealer Number  :
+DEALER_NAME_TEXT=Dealer Name  :
 
 ParthasStopSales=Part Number has Stop Sales code Applied
+supplyingPlantIsBlank=Supplying plant is blank in SAP, no additional details requested
 
- 
-#XTBS: Dealer value cannot be blank before clicking Search Material
-DealercannotbeBlank=Dealer Value cannot be blank
+divisionsDoNotMatch=Division from the URL do not match with the Dealer Division in SAP
 
 #This text added after 26-11
 TYPE=Type
-#XMSG: 
 TYPEC=Child
 TYPEM=Main
 TYPEA=Alternate
 TYPEI=Interchangeable
 TYPEF=Forward
-TYPECHEAD=Multiple
-TYPEMHEAD=Multiple
-TYPEAHEAD=Elective
 
-
-
- 
-#XMSG: 
-ParthasDoNotDisplay=The Pricing and Quantity data not available for your dealer type. 
-
+#XMSG:
+ParthasDoNotDisplay=The Pricing and Quantity data not available for your dealer type.
 supplyingPlantNotFound=Supplying Plant Not Found
