Dangerous Goods & DTD flag Addition.

--- a/partsAvailability/webapp/i18n/i18n.properties
+++ b/partsAvailability/webapp/i18n/i18n.properties
@@ -31,7 +31,8 @@ LAST_UPDATED_DATE=Last Updated Date
 FULLSCREEN_TITLE=Parts Availability
 SEARCH=SEARCH
 OBSOLETE=Obsolete
-
+DANGEROUS_GOODS=Dangerous Goods
+DIRECT_TO_DEALER=Direct To Dealer
 #YMSG: Material Not found in SAP.  Please check your Input and retry again.
 materialNotFound=Part Number Not found
 
