Added session timeout dialog

--- a/partsAvailability/webapp/i18n/i18n_en.properties
+++ b/partsAvailability/webapp/i18n/i18n_en.properties
@@ -59,3 +59,6 @@ TYPEF=Forward
 #XMSG:
 ParthasDoNotDisplay=The Pricing and Quantity data not available for your dealer type.
 supplyingPlantNotFound=Supplying Plant Not Found
+
+SESSION_EXP_TITLE=Session Expired
+SESSION_EXP_TEXT=Your session has expired. Please close this application window and open the application again on InfoStream.
