--- a/partsAvailability/webapp/i18n/i18n_fr.properties
+++ b/partsAvailability/webapp/i18n/i18n_fr.properties
@@ -65,8 +65,9 @@ DEALER_NO_TEXT=Dealer Number  :
 DEALER_NAME_TEXT=Dealer Name  :  
 
  
-Logout=Logout
 supplyingPlantIsBlank=Supplying plant is blank in SAP, no additional details requested
 
 divisionsDoNotMatch=Division from the URL do not match with the Dealer Division in SAP
 
+SESSION_EXP_TITLE=Session Expired
+SESSION_EXP_TEXT=Your session has expired. Please close this application window and open the application again on InfoStream.
