Added working logout button

--- a/partsAvailability/webapp/i18n/i18n_fr.properties
+++ b/partsAvailability/webapp/i18n/i18n_fr.properties
@@ -71,3 +71,5 @@ divisionsDoNotMatch=Division from the URL do not match with the Dealer Division 
 
 SESSION_EXP_TITLE=Session Expired
 SESSION_EXP_TEXT=Your session has expired. Please close this application window and open the application again on InfoStream.
+
+LOG_OUT_BTN_TEXT=Log Out
