--- a/partsAvailability/webapp/i18n/i18n.properties
+++ b/partsAvailability/webapp/i18n/i18n.properties
@@ -33,6 +33,7 @@ SEARCH=SEARCH
 OBSOLETE=Obsolete
 DANGEROUS_GOODS=Dangerous Goods
 DIRECT_TO_DEALER=Direct To Dealer
+
 #YMSG: Material Not found in SAP.  Please check your Input and retry again.
 materialNotFound=Part Number Not found
 
@@ -61,3 +62,5 @@ supplyingPlantNotFound=Supplying Plant Not Found
 
 SESSION_EXP_TITLE=Session Expired
 SESSION_EXP_TEXT=Your session has expired. Please close this application window and open the application again on InfoStream.
+
+LOG_OUT_BTN_TEXT=Log Out
