--- a/partsAvailability/webapp/i18n/i18n_en.properties
+++ b/partsAvailability/webapp/i18n/i18n_en.properties
@@ -62,3 +62,5 @@ supplyingPlantNotFound=Supplying Plant Not Found
 
 SESSION_EXP_TITLE=Session Expired
 SESSION_EXP_TEXT=Your session has expired. Please close this application window and open the application again on InfoStream.
+
+LOG_OUT_BTN_TEXT=Log Out
