--- a/partsAvailability/webapp/i18n/i18n_fr.properties
+++ b/partsAvailability/webapp/i18n/i18n_fr.properties
@@ -69,7 +69,7 @@ supplyingPlantIsBlank=Supplying plant is blank in SAP, no additional details req
 
 divisionsDoNotMatch=Division from the URL do not match with the Dealer Division in SAP
 
-SESSION_EXP_TITLE=Session Expired
-SESSION_EXP_TEXT=Your session has expired. Please close this application window and open the application again on InfoStream.
+SESSION_EXP_TITLE=Session expirée
+SESSION_EXP_TEXT=Votre session a expiré. Veuillez fermer cette fenêtre et ouvrir à nouveau l'application sur Infocourant.
 
 LOG_OUT_BTN_TEXT=Log Out
