Forward Header & Type Changes

--- a/partsAvailability/webapp/i18n/i18n.properties
+++ b/partsAvailability/webapp/i18n/i18n.properties
@@ -55,6 +55,14 @@ TYPEM=Main
 TYPEA=Alternate
 TYPEI=Interchangeable
 TYPEF=Forward
+TYPEE=Elective
+
+TYPECHEAD=Mulitple
+TYPEMHEAD=Multiple
+TYPEAHEAD=Elective
+TYPEEHEAD=Elective
+TYPEFHEAD=Forward
+TYPEIHEAD=Interchangeable
 
 #XMSG:
 ParthasDoNotDisplay=The Pricing and Quantity data not available for your dealer type.
