--- a/partsAvailability/webapp/i18n/i18n_en.properties
+++ b/partsAvailability/webapp/i18n/i18n_en.properties
@@ -55,6 +55,7 @@ TYPEM=Main
 TYPEA=Alternate
 TYPEI=Interchangeable
 TYPEF=Forward
+TYPEE=Elective
 
 #XMSG:
 ParthasDoNotDisplay=The Pricing and Quantity data not available for your dealer type.
