--- a/partsAvailability/webapp/i18n/i18n_fr.properties
+++ b/partsAvailability/webapp/i18n/i18n_fr.properties
@@ -48,10 +48,14 @@ TYPEM=Principale
 TYPEA=Alterner
 TYPEI=Interchangeable
 TYPEF=Vers l'avant
+TYPEE=Électif
 
 TYPECHEAD=Plusieurs
 TYPEMHEAD=Plusieurs
 TYPEAHEAD=Électif
+TYPEEHEAD=Électif
+TYPEFHEAD=Vers l'avant
+TYPEIHEAD=Interchangeable
  
 #XMSG: 
 ParthasDoNotDisplay=
