Changes to include on postock for the parts Availbility screen

--- a/partsAvailability/webapp/i18n/i18n_fr.properties
+++ b/partsAvailability/webapp/i18n/i18n_fr.properties
@@ -77,3 +77,4 @@ SESSION_EXP_TITLE=Session expirée
 SESSION_EXP_TEXT=Votre session a expiré. Veuillez fermer cette fenêtre et ouvrir à nouveau l'application sur Infocourant.
 
 LOG_OUT_BTN_TEXT=Log Out
+PO_STOCK=Stock PO 
