--- a/partsAvailability/webapp/i18n/i18n_fr.properties
+++ b/partsAvailability/webapp/i18n/i18n_fr.properties
@@ -78,3 +78,8 @@ SESSION_EXP_TEXT=Votre session a expiré. Veuillez fermer cette fenêtre et ouvr
 
 LOG_OUT_BTN_TEXT=Log Out
 PO_STOCK=Stock PO 
+
+Dangerous Good = Marchandises dangereuses
+Direct to Dealer = Direct au concessionnaire
+No Data = Aucune donnée
+Log Out = Log Out 
