--- a/partsAvailability/webapp/i18n/i18n.properties
+++ b/partsAvailability/webapp/i18n/i18n.properties
@@ -72,3 +72,7 @@ SESSION_EXP_TITLE=Session Expired
 SESSION_EXP_TEXT=Your session has expired. Please close this application window and open the application again on InfoStream.
 
 LOG_OUT_BTN_TEXT=Log Out
+
+
+NO_DATA= No Data
+LOG_OUT = Log Out
