--- a/partsAvailability/webapp/i18n/i18n_en.properties
+++ b/partsAvailability/webapp/i18n/i18n_en.properties
@@ -33,6 +33,8 @@ SEARCH=SEARCH
 OBSOLETE=Obsolete
 DANGEROUS_GOODS=Dangerous Goods
 DIRECT_TO_DEALER=Direct To Dealer
+NO_DATA= No Data
+LOG_OUT = Log Out 
 
 #YMSG: Material Not found in SAP.  Please check your Input and retry again.
 materialNotFound=Part Number Not found
