--- a/partsAvailability/webapp/i18n/i18n_fr.properties
+++ b/partsAvailability/webapp/i18n/i18n_fr.properties
@@ -79,7 +79,7 @@ SESSION_EXP_TEXT=Votre session a expiré. Veuillez fermer cette fenêtre et ouvr
 LOG_OUT_BTN_TEXT=Log Out
 PO_STOCK=Stock PO 
 
-Dangerous Good = Marchandises dangereuses
-Direct to Dealer = Direct au concessionnaire
-No Data = Aucune donnée
-Log Out = Log Out 
+DANGEROUS_GOODS = Marchandises dangereuses
+DIRECT_TO_DEALER = Direct au concessionnaire
+NO_DATA = Aucune donnée
+LOG_OUT = Log Out 
