--- a/partsAvailability/webapp/i18n/i18n_fr.properties
+++ b/partsAvailability/webapp/i18n/i18n_fr.properties
@@ -82,4 +82,4 @@ PO_STOCK=Stock PO
 DANGEROUS_GOODS = Marchandises dangereuses
 DIRECT_TO_DEALER = Direct au concessionnaire
 NO_DATA = Aucune donnée
-LOG_OUT = Log Out 
+LOG_OUT_BTN_TEXT = Log Out 
