Toggle Suggestion button added

--- a/partsAvailability/webapp/i18n/i18n.properties
+++ b/partsAvailability/webapp/i18n/i18n.properties
@@ -30,6 +30,7 @@ PART_HAS_FORWARD_SUPERSESSION=Part has Forward Supersession
 LAST_UPDATED_DATE=Last Updated Date
 FULLSCREEN_TITLE=Parts Availability
 SEARCH=SEARCH
+TOGGLE=Toggle Suggestion
 OBSOLETE=Obsolete
 DANGEROUS_GOODS=Dangerous Goods
 DIRECT_TO_DEALER=Direct To Dealer
