--- a/partsAvailability/webapp/i18n/i18n_fr.properties
+++ b/partsAvailability/webapp/i18n/i18n_fr.properties
@@ -38,6 +38,7 @@ systemErrorOccured=Une erreur du système s'est produite
 TBD=Veuillez remplir tous les champs marqués comme obligatoires
 TBD=Concessionnaire invalide 
 SEARCH=Recherche
+TOGGLE=Basculer Suggestion
 OBSOLETE=obsoleto
 ParthasStopSales=Le numéro de pièce a un code Stop Sales appliqué
 
