--- a/partsAvailability/webapp/i18n/i18n.properties
+++ b/partsAvailability/webapp/i18n/i18n.properties
@@ -31,6 +31,8 @@ LAST_UPDATED_DATE=Last Updated Date
 FULLSCREEN_TITLE=Parts Availability
 SEARCH=SEARCH
 TOGGLE=Toggle Suggestion
+TOGGLE_ON_MSG=Autofill Enabled
+TOGGLE_OFF_MSG=Autofill Disabled
 OBSOLETE=Obsolete
 DANGEROUS_GOODS=Dangerous Goods
 DIRECT_TO_DEALER=Direct To Dealer
