--- a/partsAvailability/webapp/i18n/i18n_fr.properties
+++ b/partsAvailability/webapp/i18n/i18n_fr.properties
@@ -39,6 +39,8 @@ TBD=Veuillez remplir tous les champs marqués comme obligatoires
 TBD=Concessionnaire invalide 
 SEARCH=Recherche
 TOGGLE=Basculer Suggestion
+TOGGLE_ON_MSG=Remplissage automatique activé 
+TOGGLE_OFF_MSG=Remplissage automatique désactivé
 OBSOLETE=obsoleto
 ParthasStopSales=Le numéro de pièce a un code Stop Sales appliqué
 
