Changing name of label to Autofill

--- a/partsAvailability/webapp/i18n/i18n.properties
+++ b/partsAvailability/webapp/i18n/i18n.properties
@@ -30,7 +30,7 @@ PART_HAS_FORWARD_SUPERSESSION=Part has Forward Supersession
 LAST_UPDATED_DATE=Last Updated Date
 FULLSCREEN_TITLE=Parts Availability
 SEARCH=SEARCH
-TOGGLE=Toggle Suggestion
+TOGGLE=Autofill
 TOGGLE_ON_MSG=Autofill Enabled
 TOGGLE_OFF_MSG=Autofill Disabled
 OBSOLETE=Obsolete
