--- a/partsAvailability/webapp/i18n/i18n_fr.properties
+++ b/partsAvailability/webapp/i18n/i18n_fr.properties
@@ -38,7 +38,7 @@ systemErrorOccured=Une erreur du système s'est produite
 TBD=Veuillez remplir tous les champs marqués comme obligatoires
 TBD=Concessionnaire invalide 
 SEARCH=Recherche
-TOGGLE=Remplissage automatique
+TOGGLE=Remplissage Automatique
 TOGGLE_ON_MSG=Remplissage automatique activé 
 TOGGLE_OFF_MSG=Remplissage automatique désactivé
 OBSOLETE=obsoleto
