--- a/partsAvailability/webapp/i18n/i18n_fr.properties
+++ b/partsAvailability/webapp/i18n/i18n_fr.properties
@@ -19,8 +19,8 @@ PART_TYPE_CODE=Code de type de pièce
 LOCATION_TEXT= Emplacement 
 QTY_AVAILABLE=Qté disponible
 QTY_AVAILABLE=Quantité Disponible
-QTY_BACK_ORDERED=Qté de commande en suspens
-QTY_BACK_ORDERED=Quantité de commande en suspens
+QTY_BACK_ORDERED=Qté TCI de commande en suspens
+QTY_BACK_ORDERED=Quantité TCI de commande en suspens
 MAXIMUM_DAILY_ORDERED_QTY=Qté maximum commandée quotidiennement
 MAXIMUM_DAILY_ORDERED_QTY=Quantité maximum commandée quotidiennement
 STOP_SALES_FLAG=Indicateur d'interruption des ventes 
