--- a/partsAvailability/webapp/i18n/i18n_en.properties
+++ b/partsAvailability/webapp/i18n/i18n_en.properties
@@ -17,7 +17,7 @@ SHIPPED_VIA=Shipped Via
 PART_TYPE_CODE=Part Type Code
 LOCATION_TEXT= Location
 QTY_AVAILABLE=Qty Available
-QTY_BACK_ORDERED=Qty Back Ordered
+QTY_BACK_ORDERED=Qty TCI Back Ordered
 MAXIMUM_DAILY_ORDERED_QTY=Maximum Daily Ordered Quantity
 STOP_SALES_FLAG=Stop Sales Flag
 3PL_QTY_AVAIL_TEXT= 3PL Qty Available
