text was wrong.

--- a/partsAvailability/webapp/i18n/i18n.properties
+++ b/partsAvailability/webapp/i18n/i18n.properties
@@ -10,8 +10,7 @@ SELL_PACKAGE_QTY=Sell Package Quantity
 DEALER_NET_PRICE=Dealer Net Price
 SUGGESTED_LIST_PRICE=Suggested List Price
 BACKWARD_SUPERSESSION=Backward Supersession
-EMPTY_SPACE=
-STOCKED=Stocked
+EMPTY_SPACE=STOCKED=Stocked
 RETURNABLE=Returnable
 SHIPPED_VIA=Shipped Via
 PART_TYPE_CODE=Part Type Code
