Commit Changes for CR1050 adding new field core value

--- a/partsAvailability/webapp/i18n/i18n.properties
+++ b/partsAvailability/webapp/i18n/i18n.properties
@@ -35,6 +35,7 @@ TOGGLE_OFF_MSG=Autofill Disabled
 OBSOLETE=Obsolete
 DANGEROUS_GOODS=Dangerous Goods
 DIRECT_TO_DEALER=Direct To Dealer
+CoreValue=CoreValue
 
 #YMSG: Material Not found in SAP.  Please check your Input and retry again.
 materialNotFound=Part Number Not found
