--- a/partsAvailability/webapp/i18n/i18n_en.properties
+++ b/partsAvailability/webapp/i18n/i18n_en.properties
@@ -37,6 +37,7 @@ OBSOLETE=Obsolete
 DANGEROUS_GOODS=Dangerous Goods
 DIRECT_TO_DEALER=Direct To Dealer
 NO_DATA= No Data
+CoreValue=CoreValue
 
 
 #YMSG: Material Not found in SAP.  Please check your Input and retry again.
