Commit Label change for core value to core charge

--- a/partsAvailability/webapp/i18n/i18n_en.properties
+++ b/partsAvailability/webapp/i18n/i18n_en.properties
@@ -37,7 +37,7 @@ OBSOLETE=Obsolete
 DANGEROUS_GOODS=Dangerous Goods
 DIRECT_TO_DEALER=Direct To Dealer
 NO_DATA= No Data
-CoreValue=CoreValue
+Core Charge=Core Charge
 
 
 #YMSG: Material Not found in SAP.  Please check your Input and retry again.
