Commit for french translation for core charge

--- a/partsAvailability/webapp/i18n/i18n_fr.properties
+++ b/partsAvailability/webapp/i18n/i18n_fr.properties
@@ -43,7 +43,7 @@ TOGGLE_ON_MSG=Remplissage automatique activé
 TOGGLE_OFF_MSG=Remplissage automatique désactivé
 OBSOLETE=obsoleto
 ParthasStopSales=Le numéro de pièce a un code Stop Sales appliqué
-Core Charge=Frais de noyaux
+Core_Charge=Frais de noyaux
 
 #This text added after 26-11
 TYPE=Type
