changes done for DEMAND

--- a/partsAvailability/webapp/i18n/i18n.properties
+++ b/partsAvailability/webapp/i18n/i18n.properties
@@ -78,4 +78,7 @@ LOG_OUT_BTN_TEXT=Log Out
 
 
 NO_DATA= No Data
+# DMND0002972  start by Minakshi
+order.type.standard=Standard Order
+order.type.rush=Rush Order
 
