--- a/partsAvailability/webapp/i18n/i18n_en.properties
+++ b/partsAvailability/webapp/i18n/i18n_en.properties
@@ -72,3 +72,6 @@ SESSION_EXP_TEXT=Your session has expired. Please close this application window 
 
 LOG_OUT_BTN_TEXT=Log Out
 PO_STOCK=PO Stock
+#DMND0002972  start by Minakshi
+order.type.standard=Standard Order
+order.type.rush=Rush Order
