--- a/partsAvailability/webapp/i18n/i18n_fr.properties
+++ b/partsAvailability/webapp/i18n/i18n_fr.properties
@@ -87,3 +87,6 @@ DANGEROUS_GOODS = Marchandises dangereuses
 DIRECT_TO_DEALER = Direct au concessionnaire
 NO_DATA = Aucune donnée
 LOG_OUT_BTN_TEXT = Log Out 
+#DMND0002972  start by Minakshi
+order.type.standard=Commande standard
+order.type.rush=Commande urgente
