Changes for demand

--- a/partsAvailability/webapp/i18n/i18n_en.properties
+++ b/partsAvailability/webapp/i18n/i18n_en.properties
@@ -75,3 +75,9 @@ PO_STOCK=PO Stock
 #DMND0002972  start by Minakshi
 order.type.standard=Standard Order
 order.type.rush=Rush Order
+ConfirmQuantity = Confirm Quantity
+DeliveryDate = Delivery Date
+Material = Material
+OrderType = Order Type
+OrderQuantity = Order Quantity
+Simulate = Simulate
