--- a/partsAvailability/webapp/i18n/i18n_fr.properties
+++ b/partsAvailability/webapp/i18n/i18n_fr.properties
@@ -90,3 +90,9 @@ LOG_OUT_BTN_TEXT = Log Out
 #DMND0002972  start by Minakshi
 order.type.standard=Commande standard
 order.type.rush=Commande urgente
+ConfirmQuantity = Confirmer la quantité
+DeliveryDate = Date de livraison
+Material = Matérielle
+OrderType = Type de commande
+OrderQuantity = Quantité de commande
+Simulate = Simuler
