--- a/partsAvailability/webapp/i18n/i18n.properties
+++ b/partsAvailability/webapp/i18n/i18n.properties
@@ -81,4 +81,9 @@ NO_DATA= No Data
 # DMND0002972  start by Minakshi
 order.type.standard=Standard Order
 order.type.rush=Rush Order
-
+ConfirmQuantity = Confirm Quantity
+DeliveryDate = Delivery Date
+Material = Material
+OrderType = Order Type
+OrderQuantity = Order Quantity
+Simulate = Simulate
