changes done for demnad.

--- a/partsAvailability/webapp/i18n/i18n.properties
+++ b/partsAvailability/webapp/i18n/i18n.properties
@@ -87,3 +87,4 @@ Material = Material
 OrderType = Order Type
 OrderQuantity = Order Quantity
 Simulate = Simulate
+PricingErrorSimulation = Pricing Error in Simulation
