--- a/partsAvailability/webapp/i18n/i18n_en.properties
+++ b/partsAvailability/webapp/i18n/i18n_en.properties
@@ -25,6 +25,7 @@ FORWARD_SUPER_SESSION=Forward Supersession
 PART_NUMBER=Part Number
 DEALER_NET_TEXT=Dealer Net
 QTY_REQUIRED_TEXT=Quantity Required
+PricingErrorSimulation = Pricing Error in Simulation
 QUAN_AVAIL_TEXT=Quantity Available(at Facing PDC)
 PART_HAS_FORWARD_SUPERSESSION=Part has Forward Supersession
 LAST_UPDATED_DATE=Last Updated Date
@@ -81,3 +82,4 @@ Material = Material
 OrderType = Order Type
 OrderQuantity = Order Quantity
 Simulate = Simulate
+PricingErrorSimulation = Pricing Error in Simulation
