--- a/partsAvailability/webapp/i18n/i18n_fr.properties
+++ b/partsAvailability/webapp/i18n/i18n_fr.properties
@@ -96,3 +96,4 @@ Material = Matérielle
 OrderType = Type de commande
 OrderQuantity = Quantité de commande
 Simulate = Simuler
+PricingErrorSimulation = Erreur de tarification dans la simulation
