changes done for demand

--- a/partsAvailability/webapp/i18n/i18n.properties
+++ b/partsAvailability/webapp/i18n/i18n.properties
@@ -89,5 +89,4 @@ OrderQuantity = Order Quantity
 Simulate = Simulate
 PricingErrorSimulation = Pricing Error in Simulation
 CA_Reffered = CA Referred
-ABC_indicator = ABC indicator
-Location = Location
+ABC_indicator = Movement Code(ABC)
