--- a/partsAvailability/webapp/i18n/i18n_en.properties
+++ b/partsAvailability/webapp/i18n/i18n_en.properties
@@ -83,3 +83,6 @@ OrderType = Order Type
 OrderQuantity = Order Quantity
 Simulate = Simulate
 PricingErrorSimulation = Pricing Error in Simulation
+
+CA_Reffered = CA Referred
+ABC_indicator = Movement Code(ABC)
