--- a/partsAvailability/webapp/i18n/i18n_fr.properties
+++ b/partsAvailability/webapp/i18n/i18n_fr.properties
@@ -97,3 +97,6 @@ OrderType = Type de commande
 OrderQuantity = Quantité de commande
 Simulate = Simuler
 PricingErrorSimulation = Erreur de tarification dans la simulation
+
+CA_Reffered = Référable au CA
+ABC_indicator = Code de mouvement (ABC)
