changes done for translation

--- a/partsAvailability/webapp/i18n/i18n.properties
+++ b/partsAvailability/webapp/i18n/i18n.properties
@@ -88,5 +88,5 @@ OrderType = Order Type
 OrderQuantity = Order Quantity
 Simulate = Simulate
 PricingErrorSimulation = Pricing Error in Simulation
-CA_Reffered = CA Referred
+CA_Reffered = CA Referable
 ABC_indicator = Movement Code(ABC)
