--- a/partsAvailability/webapp/i18n/i18n_en.properties
+++ b/partsAvailability/webapp/i18n/i18n_en.properties
@@ -84,5 +84,5 @@ OrderQuantity = Order Quantity
 Simulate = Simulate
 PricingErrorSimulation = Pricing Error in Simulation
 
-CA_Reffered = CA Referred
+CA_Reffered = CA Referable
 ABC_indicator = Movement Code(ABC)
