INC0230996 changes into U43

--- a/partsAvailability/webapp/i18n/i18n_fr.properties
+++ b/partsAvailability/webapp/i18n/i18n_fr.properties
@@ -62,8 +62,7 @@ TYPEFHEAD=Vers l'avant
 TYPEIHEAD=Interchangeable
  
 #XMSG: 
-ParthasDoNotDisplay=
-Les données de tarification et de quantité ne sont pas disponibles pour votre type de revendeur.
+ParthasDoNotDisplay=Les données de tarification et de quantité ne sont pas disponibles pour votre type de revendeur.
 
 
 supplyingPlantNotFound=Usine fournisseur introuvable
